# mermaid-render

./: .bandit  .codeclimate.yml  .cz.toml  .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .releaserc.json  .safety-policy.json  .secrets.baseline  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION_GUIDE.md  Makefile  PLUGIN_ARCHITECTURE_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  WARP.md  demo.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_mcp_tests.py  tox.ini
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  dependabot.yml.config  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  update-deps.yml
browser_test_svgs/: COMPATIBILITY_GUIDE.md  browser_test.html
diagramaid/: __init__.py  cli.py  convenience.py  core.py  exceptions.py  mcp_server.py  plugin_renderer.py  py.typed
diagramaid/ai/: __init__.py  analysis.py  compatibility.py  providers.py  suggestions.py  utils.py
diagramaid/config/: __init__.py  config_manager.py  theme_manager.py
diagramaid/interactive/: __init__.py  builder.py  export.py  server.py  templates.py  websocket_handler.py
diagramaid/mcp/: __init__.py  server.py
diagramaid/models/: __init__.py  er_diagram.py  state.py  user_journey.py
diagramaid/renderers/: __init__.py  config_manager.py  error_handler.py  graphviz_renderer.py  svg_renderer.py
diagramaid/templates/: __init__.py  library.py  schema.py  template_manager.py
diagramaid/utils/: __init__.py  export.py  helpers.py  http_client.py
diagramaid/validators/: validator.py
docs/: API.md  DEVELOPMENT.md  ENHANCED_AI_README.md  ai_module_enhancement.md  architecture.md  gen_ref_pages.py  index.md
docs/api/: index.md
docs/api-reference/: index.md
docs/architecture/: index.md  overview.md
docs/development/: contributing.md  index.md
docs/examples/: index.md
docs/getting-started/: basic-usage.md  index.md  installation.md  quick-start.md
docs/guides/: ai-enhancement.md  api-overview.md  index.md  quick-start.md
docs/internal/: CONSOLIDATION_REPORT.md  ENHANCED_MCP_SUMMARY.md  MCP_OPTIMIZATION_SUMMARY.md  MCP_TESTING_DOCUMENTATION.md  MCP_TESTING_SUMMARY.md  PYDANTIC_DEPRECATION_FIXES.md  TESTING_ORGANIZATION_SUMMARY.md  index.md
docs/testing/: ENHANCED_MCP_SUMMARY.md  MCP_OPTIMIZATION_SUMMARY.md  MCP_TESTING_DOCUMENTATION.md  MCP_TESTING_SUMMARY.md  PYDANTIC_DEPRECATION_FIXES.md  TESTING_ORGANIZATION_SUMMARY.md
docs/user-guide/: advanced-features.md  ai-features.md  caching.md  configuration.md  diagram-types.md  export-formats.md  index.md  interactive.md  rendering.md  templates.md  themes.md  validation.md
examples/: README.md  advanced_usage.py  ai_features_showcase.py  basic_usage.py  diagram_types_showcase.py  enhanced_ai_features.py  improved_ai_features.py  integration_examples.py  interactive_collaboration_showcase.py  performance_caching_showcase.py  real_world_use_cases.py  run_all_examples.py  template_system_showcase.py  testing_validation_showcase.py
llmdoc/: index.md
llmdoc/agent/: code-duplication-summary-and-refactoring-priorities.md  model-classes-common-patterns-and-base-class-opportunities.md  renderer-duplication-and-refactoring-opportunities.md  validation-redundancy-and-configuration-overlap.md
mcp-config/: README.md  claude_desktop_config.json  mcp.json  windsurf_config.json
mermaid_render/: __init__.py  _version.py  cli.py  convenience.py  core.py  enhanced_renderer.py  exceptions.py  mcp_server.py  plugin_renderer.py  py.typed
mermaid_render/ai/: README.md  __init__.py  analysis.py  compatibility.py  diagram_generator.py  nl_processor.py  optimization.py  providers.py  suggestions.py  utils.py
mermaid_render/collaboration/: README.md  __init__.py  activity_log.py  collaboration_manager.py  comments.py  diff_engine.py  merge_resolver.py  utils.py  version_control.py
mermaid_render/config/: README.md  config_manager.py  theme_manager.py
mermaid_render/interactive/: README.md  __init__.py  builder.py  export.py  performance.py  security.py  server.py  templates.py  ui_components.py  utils.py  validation.py  websocket_handler.py
mermaid_render/mcp/: README.md  __init__.py  prompts.py  resources.py  server.py  tools.py
mermaid_render/models/: README.md  __init__.py  class_diagram.py  constants.py  er_diagram.py  flowchart.py  gantt.py  git_graph.py  mindmap.py  pie_chart.py  sequence.py  state.py  timeline.py  user_journey.py
mermaid_render/renderers/: README.md  __init__.py  base.py  config_manager.py  error_handler.py  graphviz_renderer.py  logging_config.py  manager.py  nodejs_renderer.py  pdf_renderer.py  pdf_renderer_plugin.py  playwright_renderer.py  png_renderer.py  png_renderer_plugin.py  registry.py  svg_renderer.py  svg_renderer_plugin.py  validation.py
mermaid_render/templates/: README.md  __init__.py  data_sources.py  generators.py  library.py  schema.py  template_manager.py  utils.py
mermaid_render/utils/: README.md  __init__.py  export.py  helpers.py  http_client.py  validation.py
mermaid_render/validators/: README.md  __init__.py  validator.py
scripts/: README.md  add_missing_annotations.py  add_test_annotations.py  benchmark.py  db-migrate.py  deploy.py  dev.py  docker-manager.py  fix_any_syntax.py  fix_param_annotations.py  fix_syntax_errors.py  qa-check.py  quality_checker.py  remove_unused_ignores.py  setup-dev.bat  setup-dev.py  setup-dev.sh  validate-package.py  verify-scripts.py  version_manager.py
scripts/hooks/: detect_secrets_hook.py
tests/: README.md  __init__.py  conftest.py  run_comprehensive_tests.py
tests/browser_compatibility/: __init__.py  test_cross_browser_compatibility.py
tests/e2e/: __init__.py  test_browser_compatibility.py  test_export_workflows.py  test_remote_rendering.py  test_svg_rendering.py  test_theme_support.py
tests/error_handling/: __init__.py  test_error_handling.py  (+1 more)
tests/mcp/: README.md  (+3 more)
(+297 files in other folders)
